Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 Current Position
               </div>
               <h3 class="heading text-xl font-semibold">Full-stack Developer</h3>
-              <p class="text-primary font-medium">Design Zeron</p>
+              <p class="text-primary font-medium">Design Zeros</p>
               <p class="text-slate-500 text-sm mt-1">Oct 2023 – Present</p>
               <p class="text-slate-500 text-sm">Karachi Division, Pakistan</p>
             </div>
@@ -849,3 +849,4 @@
   </script>
 </body>
 </html>
+
