Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
       <!-- Project 2 -->
       <div class="card rounded-2xl bg-white border border-slate-200 overflow-hidden shadow-sm reveal">
         <div class="h-48 bg-gradient-to-r from-accent to-secondary flex items-center justify-center">
-          <img src="assets/images/mash3D.webp" alt="mash3D Project">
+          <img src="assets/images/mash3d.webp" alt="mash3D Project">
         </div>
         <div class="p-6">
           <div class="text-xs uppercase tracking-widest text-accent font-semibold mb-2">
@@ -849,4 +849,5 @@
   </script>
 </body>
 </html>
+
 
